# airdrop-works

./: .env.example  .gitignore  CLAUDE.md  COMPLIANCE.md  DEPLOYMENT.md  LAUNCH_CHECKLIST.md  README.md  RUNBOOK.md  SPORE_LEARN.md  SPORE_READ_Me.md  docker-compose.prod.yml  docker-compose.yml  spore-build-plan.md  supabase-schema.sql  vercel.json
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/ai_core/: __init__.py  apps.py  serializers.py  service.py  tasks.py  types.py  urls.py  views.py  workflow.py
backend/apps/contributions/: admin.py  crawlers.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/core/: models.py  urls.py  views.py
backend/apps/judge/: admin.py  apps.py  models.py  service.py  tasks.py  urls.py  views.py
backend/apps/leaderboard/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/payments/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/profiles/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/quests/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/rewards/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/spore/: __init__.py  admin.py  apps.py  models.py  (+5 more)
backend/common/: email.py  exceptions.py  models.py  pagination.py  permissions.py
backend/config/: asgi.py  celery.py  urls.py  wsgi.py
backend/scripts/: spore_launch_smoke.py
(+223 files in other folders)
